# sermonizer

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: config.rs  logging.rs  main.rs  port_discovery.rs  serial_io.rs  time_utils.rs
src/ui/: app_state.rs  mod.rs  rendering.rs
