[package]
name = "sermonizer"
version = "0.1.0"
edition = "2024"
authors = [
    "Joel Schulz-Andres <joel@systemscape.de>",
    "Julian Dickert <julian@systemscape.de>",
]
categories = ["command-line-utilities", "development-tools", "embedded"]
description = "A simple, clean serial monitor with a clean terminal UI for embedded development"
license = "MIT"
readme = "README.md"
repository = "https://github.com/systemscape/sermonizer"
keywords = ["serial", "monitor", "embedded", "terminal", "tui"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
ctrlc = "3.4"
ratatui = "0.29"
serialport = "4.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "time", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
